# mymapPluginForQt

./: README.md
MyQtLocation-1.0.0/DemoSrc/: main.qml
MyQtLocation-1.0.0/MyMapPlugin/: CMakeLists.txt  GeoTileFetcherMyMap.cpp  GeoTiledMappingManagerEngineMyMap.cpp
